--- a/partials/register.phtml
+++ b/partials/register.phtml
@@ -1,4 +1,12 @@
-<?php if (!defined('BASEDIR')) die('You cannot call this script directly !') ?>
+<?php
+if (!defined('BASEDIR')) die('You cannot call this script directly !')
+
+/**
+ * FIXME: registration workflow
+ * - check for valid email address ("wurfmaul" was accepted)
+ * - if registration successful, log in automatically and goto index?
+ */
+?>
 <!-- HEADER -->
 <div class="page-header">
     <h1><?= $l10n['register'] ?> <small><?= $l10n['become_user'] ?></small></h1>
