--- a/partials/view.phtml
+++ b/partials/view.phtml
@@ -23,7 +23,7 @@ $tree = json_decode($_algo->tree);
 // open section if it is specified
 $section = array ('controls' => false, 'pseudo' => false, 'source' => false,
     'desc' => false, 'memory' => false, 'stats' => false);
-$sectionNum = isset($_GET['section']) ? $_GET['section'] : 4;
+$sectionNum = isset($_GET['section']) ? $_GET['section'] : SECTIONS_VIEW;
 if ($sectionNum >= 32) { $section['stats'] = true; $sectionNum -= 32; }
 if ($sectionNum >= 16) { $section['memory'] = true; $sectionNum -= 16; }
 if ($sectionNum >= 8) { $section['desc'] = true; $sectionNum -= 8; }
@@ -122,7 +122,9 @@ if ($sectionNum >= 1) { $section['controls'] = true; }
             </div>
             <div id="sourcecode" class=" panel-collapse collapse <?= $section['source'] ? 'in' : 'closed' ?>">
                 <div class="panel-body">
-                    <?php print_r($tree) ?>
+                    <pre>
+                        <?php print_r($tree) ?>
+                    </pre>
                 </div>
             </div>
         </div>
