--- a/partials/edit.phtml
+++ b/partials/edit.phtml
@@ -20,11 +20,12 @@ if (!isSignedIn() || $_SESSION['uid'] != $_algo->uid){
 }
 
 // extract variables
+require_once BASEDIR . "includes/nodes.php";
 $name = stripslashes($_algo->name);
 $description = stripslashes($_algo->description);
 $long_description = stripslashes($_algo->long_description);
 $vars = json_decode($_algo->variables);
-$steps = base64_decode($_algo->source_html);
+$tree = new Tree(json_decode($_algo->tree));
 
 // add prototype row to variables
 $prototype = new stdClass();
@@ -216,7 +217,7 @@ if ($sectionNum >= 1) { $section['info'] = true; }
                 </div>
                 <div id="stepPanel" class="panel-collapse collapse <?= $section['steps'] ? 'in' : 'closed' ?>">
                     <div class="panel-body" style="text-align: center">
-                        <ul id="insertStepsHere" class="sortable"><?= $steps ?></ul>
+                        <ul id="insertStepsHere" class="sortable"><?php $tree->printHtml() ?></ul>
 
                         <div id="node-btn-group" class="btn-group btn-group-lg" role="group" aria-label="Create a Node">
                             <button id="btn-add-assign" type="button" class="btn btn-default btn-lg" data-node="assign-node">Assign</button>
@@ -230,7 +231,6 @@ if ($sectionNum >= 1) { $section['info'] = true; }
                         <ul style="display: none">
                             <?php
                             // generate prototypes
-                            require_once BASEDIR . "includes/nodes.php";
                             Node::printPrototype(Node::$ASSIGN);
                             Node::printPrototype(Node::$COMPARE);
                             Node::printPrototype(Node::$CONSTANT);
