source code generation, tree management, view-mode style for tree

--- a/css/edit.less
+++ b/css/edit.less
@@ -1,3 +1,5 @@
+@import "algorithm";
+
 #saveSuccess {
   font-size: small;
   vertical-align: middle;
@@ -37,131 +39,18 @@
 }
 
 #stepPanel {
-  @assign-node-color: #ffb181;
-  @compare-node-color: #fff465;
-  @constant-node-color: #a6e0ff;
-  @if-node-color: #b2e792;
-  @var-node-color: #d3d3d3;
-  @while-node-color: #d5a2da;
-
-  ul.sortable {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    min-height: 20px;
-
-    .node {
-      @border: 1px solid gray;
-      @radius: 5px;
-      @form-background-color-factor: 5%;
-      @form-border-color-factor: 20%;
-      @form-border-style: 1px dashed;
-
-      list-style-type: none;
-
-      table {
-        border-collapse: separate;
-        padding: 1px;
-        text-align: left;
-      }
-
-      .handle {
-        cursor: move;
-      }
-
-      .node-box {
-        min-width: 20px;
-        font-family: monospace, Courier;
-
-        &.full-width {
-          width: 100%;
-        }
-        &.half-width {
-          width: 50%;
-        }
-
-        &.top {
-          border-top: @border;
-          &.left {
-            -moz-border-radius-topleft: @radius;
-            -webkit-border-top-left-radius: @radius;
-            border-top-left-radius: @radius;
-          }
-          &.right {
-            -moz-border-radius-topright: @radius;
-            -webkit-border-top-right-radius: @radius;
-            border-top-right-radius: @radius;
-          }
-        }
-        &.right {
-          border-right: @border;
-        }
-        &.bottom {
-          border-bottom: @border;
-          &.left {
-            -moz-border-radius-bottomleft: @radius;
-            -webkit-border-bottom-left-radius: @radius;
-            border-bottom-left-radius: @radius;
-          }
-          &.right {
-            -moz-border-radius-bottomright: @radius;
-            -webkit-border-bottom-right-radius: @radius;
-            border-bottom-right-radius: @radius;
-          }
-        }
-        &.left {
-          border-left: @border;
-        }
-      }
-
-      &.assign-node > table > tbody > tr > td {
-        &.node-box {
-          background-color: @assign-node-color;
-        }
-      }
-
-      &.compare-node > table > tbody > tr > td {
-        &.node-box {
-          background-color: @compare-node-color;
-        }
-        select {
-          background-color: darken(@compare-node-color, @form-background-color-factor);
-          border: @form-border-style darken(@compare-node-color, @form-border-color-factor);
-        }
-      }
-
-      &.constant-node > table > tbody > tr > td {
-        &.node-box {
-          background-color: @constant-node-color;
-          input {
-            background-color: darken(@constant-node-color, @form-background-color-factor);
-            border: @form-border-style darken(@constant-node-color, @form-border-color-factor);
-          }
-        }
-      }
-
-      &.if-node > table > tbody > tr > td {
-        &.node-box {
-          background-color: @if-node-color;
-        }
-      }
-
-      &.var-node > table > tbody > tr > td {
-        &.node-box {
-          background-color: @var-node-color;
-        }
-        select {
-          background-color: darken(@var-node-color, @form-background-color-factor);
-          border: @form-border-style darken(@var-node-color, @form-border-color-factor);
-        }
-      }
-
-      &.while-node > table > tbody > tr > td {
-        &.node-box {
-          background-color: @while-node-color;
-        }
+  .algorithm {
+    .var-node {
+      .var-value-input {
+        display: none;
       }
     }
+    .compare-node {
+      .compare-operation-input {
+        display: none;
+      }
+    }
+
     .sortable-highlight {
       background-color: greenyellow;
       border: 2px dashed forestgreen;
