--- a/css/view.less
+++ b/css/view.less
@@ -1,3 +1,21 @@
+@import "algorithm";
+
+.algorithm {
+  .close {
+    display: none;
+  }
+  .var-node {
+    .var-value {
+      display: none;
+    }
+  }
+  .compare-node {
+    .compare-operation {
+      display: none;
+    }
+  }
+}
+
 .cursor {
     display: inline-block;
     min-width: 10px;
