--- a/partials/edit.phtml
+++ b/partials/edit.phtml
@@ -19,21 +19,18 @@ if (!isSignedIn() || $_SESSION['uid'] != $_algo->uid){
     die();
 }
 
-// extract variables
-require_once BASEDIR . "includes/nodes.php";
+// prepare algorithm meta data
 $name = stripslashes($_algo->name);
 $description = stripslashes($_algo->description);
 $long_description = stripslashes($_algo->long_description);
-$vars = json_decode($_algo->variables);
-$tree = new Tree(json_decode($_algo->tree));
 
-// add prototype row to variables
-$prototype = new stdClass();
-$prototype->name = "";
-$prototype->init = "elem-?";
-$prototype->value = "";
-$prototype->size = 2;
-$vars['prototype'] = $prototype;
+// prepare variables and add prototype row to variables
+$vars = json_decode($_algo->variables);
+$vars['prototype'] = (object) ['name' => '', 'init' => 'elem-?', 'value' => '', 'size' => 2];
+
+// prepare tree
+require_once BASEDIR . "includes/nodes.php";
+$tree = new Tree(json_decode($_algo->tree));
 
 // open section if it is specified
 $section = array ('info' => false, 'vars' => false, 'steps' => false);
@@ -216,8 +213,8 @@ if ($sectionNum >= 1) { $section['info'] = true; }
                     </h4>
                 </div>
                 <div id="stepPanel" class="panel-collapse collapse <?= $section['steps'] ? 'in' : 'closed' ?>">
-                    <div class="panel-body" style="text-align: center">
-                        <ul id="insertStepsHere" class="sortable"><?php $tree->printHtml() ?></ul>
+                    <div class="panel-body algorithm" style="text-align: center">
+                        <ul id="insertStepsHere" class="sortable"><?php $tree->printHtml(['vars' => $vars]) ?></ul>
 
                         <div id="node-btn-group" class="btn-group btn-group-lg" role="group" aria-label="Create a Node">
                             <button id="btn-add-assign" type="button" class="btn btn-default btn-lg" data-node="assign-node">Assign</button>
@@ -231,12 +228,12 @@ if ($sectionNum >= 1) { $section['info'] = true; }
                         <ul style="display: none">
                             <?php
                             // generate prototypes
-                            Node::printPrototype(Node::$ASSIGN);
-                            Node::printPrototype(Node::$COMPARE);
-                            Node::printPrototype(Node::$CONSTANT);
-                            Node::printPrototype(Node::$IF);
-                            Node::printPrototype(Node::$VAR, ['vars' => $vars]);
-                            Node::printPrototype(Node::$WHILE);
+                            Node::printPrototype(Node::ASSIGN_NODE);
+                            Node::printPrototype(Node::COMPARE_NODE);
+                            Node::printPrototype(Node::CONSTANT_NODE);
+                            Node::printPrototype(Node::IF_NODE);
+                            Node::printPrototype(Node::VAR_NODE, ['vars' => $vars]);
+                            Node::printPrototype(Node::WHILE_NODE);
                             ?>
                         </ul>
                     </div>
