--- a/partials/edit.phtml
+++ b/partials/edit.phtml
@@ -32,14 +32,12 @@ $vars['prototype'] = (object) ['name' => '', 'init' => 'elem-?', 'value' => '', 
 require_once BASEDIR . "includes/nodes.php";
 $tree = new Tree(json_decode($_algo->tree));
 
-// open section if it is specified
-$section = array ('info' => false, 'vars' => false, 'steps' => false);
+// prepare sections
+require_once BASEDIR . "includes/viewHelper.php";
 $sectionNum = isset($_GET['section']) ? $_GET['section'] : SECTIONS_EDIT;
-if ($sectionNum >= 4) { $section['steps'] = true; $sectionNum -= 4; }
-if ($sectionNum >= 2) { $section['vars'] = true; $sectionNum -= 2; }
-if ($sectionNum >= 1) { $section['info'] = true; }
-?>
+$section = sections($sectionNum, 3);
 
+?>
 <!-- HEADER -->
 <div class="page-header">
     <h1>
@@ -66,11 +64,11 @@ if ($sectionNum >= 1) { $section['info'] = true; }
             <div class="panel panel-default">
                 <div class="panel-heading" data-toggle="collapse" data-target="#infoPanel">
                     <h4 class="panel-title">
-                        <span class="glyphicon glyphicon-chevron-<?php if ($section['info']): ?>down<?php else: ?>right<?php endif ?>"></span>
+                        <span class="glyphicon glyphicon-chevron-<?php if ($section[0]): ?>down<?php else: ?>right<?php endif ?>"></span>
                         <?= $l10n['general_info'] ?>
                     </h4>
                 </div>
-                <div id="infoPanel" class="panel-collapse collapse <?= $section['info'] ? 'in' : 'closed' ?>">
+                <div id="infoPanel" class="panel-collapse collapse <?= $section[0] ? 'in' : 'closed' ?>">
                     <div class="panel-body form-horizontal">
                         <div class="form-group">
                             <label for="in-name" class="control-label col-sm-3"><?= $l10n['algo_name'] ?></label>
@@ -97,11 +95,11 @@ if ($sectionNum >= 1) { $section['info'] = true; }
             <div class="panel panel-default">
                 <div class="panel-heading" data-toggle="collapse" data-target="#varPanel">
                     <h4 class="panel-title">
-                        <span class="glyphicon glyphicon-chevron-<?php if ($section['vars']): ?>down<?php else: ?>right<?php endif ?>"></span>
+                        <span class="glyphicon glyphicon-chevron-<?php if ($section[1]): ?>down<?php else: ?>right<?php endif ?>"></span>
                         <?= $l10n['variables'] ?>
                     </h4>
                 </div>
-                <div id="varPanel" class="panel-collapse collapse <?= $section['vars'] ? 'in' : 'closed' ?>">
+                <div id="varPanel" class="panel-collapse collapse <?= $section[1] ? 'in' : 'closed' ?>">
                     <div class="panel-body" style="text-align: center;">
                         <table class="table table-condensed table-bordered table-hover variables">
                             <tbody id="insertVarsHere">
@@ -208,11 +206,11 @@ if ($sectionNum >= 1) { $section['info'] = true; }
             <div class="panel panel-default">
                 <div class="panel-heading" data-toggle="collapse" data-target="#stepPanel">
                     <h4 class="panel-title">
-                        <span class="glyphicon glyphicon-chevron-<?php if ($section['steps']): ?>down<?php else: ?>right<?php endif ?>"></span>
+                        <span class="glyphicon glyphicon-chevron-<?php if ($section[2]): ?>down<?php else: ?>right<?php endif ?>"></span>
                         <?= $l10n['steps'] ?>
                     </h4>
                 </div>
-                <div id="stepPanel" class="panel-collapse collapse <?= $section['steps'] ? 'in' : 'closed' ?>">
+                <div id="stepPanel" class="panel-collapse collapse <?= $section[2] ? 'in' : 'closed' ?>">
                     <div class="panel-body algorithm" style="text-align: center">
                         <ul id="insertStepsHere" class="sortable"><?php $tree->printHtml(['vars' => $vars]) ?></ul>
 
