massive refactoring of parsing methods

--- a/css/algorithm.less
+++ b/css/algorithm.less
@@ -1,4 +1,9 @@
-@import "definitions";
+@assign-node-color: #ffb181;
+@compare-node-color: #fff465;
+@constant-node-color: #a6e0ff;
+@if-node-color: #b2e792;
+@var-node-color: #d3d3d3;
+@while-node-color: #d5a2da;
 
 .algorithm {
   ul {
