--- a/partials/view.phtml
+++ b/partials/view.phtml
@@ -22,7 +22,7 @@ $long_description = stripslashes($_algo->long_description);
 $vars = json_decode($_algo->variables);
 
 // prepare tree
-require_once BASEDIR . "includes/nodes.php";
+require_once BASEDIR . "includes/algorithm.php";
 $tree = new Tree(json_decode($_algo->tree));
 
 // prepare sections
@@ -58,12 +58,12 @@ $section = sections($sectionNum, 6);
                 <div class="panel-body">
                     <div class="btn-group btn-group-justified">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-default" title="<?= $l10n['back_to_start'] ?>" id="btn-reset" disabled="disabled">
+                            <button type="button" class="btn btn-default" title="<?= $l10n['back_to_start'] ?>" id="btn-reset">
                                 <span class="glyphicon glyphicon-fast-backward"></span>
                             </button>
                         </div>
                         <div class="btn-group">
-                            <button type="button" class="btn btn-default" title="<?= $l10n['step_back'] ?>" id="btn-stepback" disabled="disabled">
+                            <button type="button" class="btn btn-default" title="<?= $l10n['step_back'] ?>" id="btn-stepback">
                                 <span class="glyphicon glyphicon-step-backward"></span>
                             </button>
                         </div>
@@ -97,7 +97,7 @@ $section = sections($sectionNum, 6);
             </div>
             <div id="pseudocode" class="panel-collapse collapse <?= $section[1] ? 'in' : 'closed' ?>">
                 <div class="panel-body algorithm">
-                    <ul><?php $tree->printHtml(['vars' => $vars]) ?></ul>
+                    <ul id="insertStepsHere"><?php $tree->printHtml(['vars' => $vars]) ?></ul>
                 </div>
             </div>
         </div>
