--- a/partials/edit.phtml
+++ b/partials/edit.phtml
@@ -14,7 +14,7 @@ $_algo = $_model->fetchAlgorithmByAID($aid);
 $_model->close();
 
 // check authentication
-if (!isSignedIn() || $_SESSION['uid'] != $_algo->uid){
+if (!isSignedIn() || $_SESSION['uid'] != $_algo->uid) {
     header("Location:" . url(['action' => 'view', 'aid' => $aid]));
     die();
 }
@@ -26,7 +26,7 @@ $long_description = stripslashes($_algo->long_description);
 
 // prepare variables and add prototype row to variables
 $vars = json_decode($_algo->variables);
-$vars['prototype'] = (object) ['name' => '', 'init' => 'elem-?', 'value' => '', 'size' => 2];
+$vars['prototype'] = (object)['name' => '', 'init' => 'elem-?', 'value' => '', 'size' => 2];
 
 // prepare tree
 require_once BASEDIR . "includes/algorithm.php";
@@ -53,7 +53,9 @@ $section = sections($sectionNum, 3);
         <button id="editAlertClose" type="button" class="close">
             <span aria-hidden="true">&times;</span><span class="sr-only"><?= $l10n['close'] ?></span>
         </button>
-        <strong><?= $l10n['error'] ?></strong><div id="editAlertText"></div>
+        <strong><?= $l10n['error'] ?></strong>
+
+        <div id="editAlertText"></div>
     </div>
     <!-- ERROR MESSAGE END -->
 
@@ -64,7 +66,8 @@ $section = sections($sectionNum, 3);
             <div class="panel panel-default">
                 <div class="panel-heading" data-toggle="collapse" data-target="#infoPanel">
                     <h4 class="panel-title">
-                        <span class="glyphicon glyphicon-chevron-<?php if ($section[0]): ?>down<?php else: ?>right<?php endif ?>"></span>
+                        <span
+                            class="glyphicon glyphicon-chevron-<?php if ($section[0]): ?>down<?php else: ?>right<?php endif ?>"></span>
                         <?= $l10n['general_info'] ?>
                     </h4>
                 </div>
@@ -72,20 +75,22 @@ $section = sections($sectionNum, 3);
                     <div class="panel-body form-horizontal">
                         <div class="form-group">
                             <label for="in-name" class="control-label col-sm-3"><?= $l10n['algo_name'] ?></label>
+
                             <div class="col-sm-9">
-                                <input type="text" class="form-control" id="in-name" placeholder="<?= $l10n['algo_name'] ?>"
-                                    value="<?= $name ?>">
+                                <input type="text" class="form-control" id="in-name"
+                                       placeholder="<?= $l10n['algo_name'] ?>" value="<?= $name ?>">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="in-title" class="control-label col-sm-3"><?= $l10n['description'] ?></label>
+
                             <div class="col-sm-9">
-                                <input type="text" class="form-control" id="in-desc" placeholder="<?= $l10n['description'] ?>"
-                                       value="<?= $description ?>">
+                                <input type="text" class="form-control" id="in-desc"
+                                       placeholder="<?= $l10n['description'] ?>" value="<?= $description ?>">
                             </div>
                         </div>
-                        <textarea class="form-control" id="in-long" rows="3" data-placeholder="<?= $l10n['long_description'] ?>"
-                            ><?= $long_description ?></textarea>
+                        <textarea class="form-control" id="in-long" rows="3"
+                                  data-placeholder="<?= $l10n['long_description'] ?>"><?= $long_description ?></textarea>
                     </div>
                 </div>
             </div>
@@ -95,7 +100,8 @@ $section = sections($sectionNum, 3);
             <div class="panel panel-default">
                 <div class="panel-heading" data-toggle="collapse" data-target="#varPanel">
                     <h4 class="panel-title">
-                        <span class="glyphicon glyphicon-chevron-<?php if ($section[1]): ?>down<?php else: ?>right<?php endif ?>"></span>
+                        <span
+                            class="glyphicon glyphicon-chevron-<?php if ($section[1]): ?>down<?php else: ?>right<?php endif ?>"></span>
                         <?= $l10n['variables'] ?>
                     </h4>
                 </div>
@@ -110,9 +116,10 @@ $section = sections($sectionNum, 3);
                                     $selInit[$mode] = $var->init === $mode ? 'selected="selected"' : '';
                                 $valueVisible = ($var->init === 'elem-value' || $var->init === 'array-custom') ? '' : 'style="display:none"';
                                 $sizeVisible = ($var->init === 'array-?' || $var->init === 'array-random') ? '' : 'style="display:none"';
-                            ?>
+                                ?>
                                 <tr id="var-<?= $vid ?>" class="varRow" data-vid="<?= $vid ?>" <?= $rowVisible ?>
-                                    data-name="<?= $var->name ?>" data-init="<?= $var->init ?>" data-value="<?= $var->value ?>" data-size="<?= $var->size ?>">
+                                    data-name="<?= $var->name ?>" data-init="<?= $var->init ?>"
+                                    data-value="<?= $var->value ?>" data-size="<?= $var->size ?>">
                                     <!-- Variable in view mode -->
                                     <td class="content view">
                                         <div class="col-lg-12">
@@ -121,10 +128,12 @@ $section = sections($sectionNum, 3);
                                     </td>
                                     <td class="buttons view">
                                         <div class="btn-group btn-group-xs">
-                                            <button type="button" class="btn btn-default btn-var-edit" title="<?= $l10n['edit_var'] ?>">
+                                            <button type="button" class="btn btn-default btn-var-edit"
+                                                    title="<?= $l10n['edit_var'] ?>">
                                                 <span class="glyphicon glyphicon-pencil"></span>
                                             </button>
-                                            <button type="button" class="btn btn-default btn-var-remove" title="<?= $l10n['remove_var'] ?>">
+                                            <button type="button" class="btn btn-default btn-var-remove"
+                                                    title="<?= $l10n['remove_var'] ?>">
                                                 <span class="glyphicon glyphicon-trash"></span>
                                             </button>
                                         </div>
@@ -135,7 +144,8 @@ $section = sections($sectionNum, 3);
                                         <div class="col-xs-4">
                                             <div class="form-group name-group">
                                                 <label class="sr-only" for="name"><?= $l10n['var_name'] ?></label>
-                                                <input class="form-control name" value="<?= $var->name ?>" placeholder="<?= $l10n['name'] ?>" type="text">
+                                                <input class="form-control name" value="<?= $var->name ?>"
+                                                       placeholder="<?= $l10n['name'] ?>" type="text">
                                             </div>
                                         </div>
                                         <div class="col-xs-1">
@@ -146,13 +156,18 @@ $section = sections($sectionNum, 3);
                                                 <label class="sr-only" for="init"><?= $l10n['init'] ?></label>
                                                 <select class="form-control init">
                                                     <optgroup label="Element">
-                                                        <option value="elem-?" <?= $selInit['elem-?'] ?>><?= $l10n['uninitialized'] ?></option>
-                                                        <option value="elem-value" <?= $selInit['elem-value'] ?> data-target=".value"><?= $l10n['value'] ?></option>
+                                                        <option
+                                                            value="elem-?" <?= $selInit['elem-?'] ?>><?= $l10n['uninitialized'] ?></option>
+                                                        <option value="elem-value" <?= $selInit['elem-value'] ?>
+                                                                data-target=".value"><?= $l10n['value'] ?></option>
                                                     </optgroup>
                                                     <optgroup label="Array">
-                                                        <option value="array-?"  <?= $selInit['array-?'] ?> data-target=".size"><?= $l10n['uninitialized'] ?></option>
-                                                        <option value="array-random"  <?= $selInit['array-random'] ?> data-target=".size"><?= $l10n['random'] ?></option>
-                                                        <option value="array-custom"  <?= $selInit['array-custom'] ?> data-target=".value"><?= $l10n['custom'] ?></option>
+                                                        <option value="array-?"  <?= $selInit['array-?'] ?>
+                                                                data-target=".size"><?= $l10n['uninitialized'] ?></option>
+                                                        <option value="array-random"  <?= $selInit['array-random'] ?>
+                                                                data-target=".size"><?= $l10n['random'] ?></option>
+                                                        <option value="array-custom"  <?= $selInit['array-custom'] ?>
+                                                                data-target=".value"><?= $l10n['custom'] ?></option>
                                                     </optgroup>
                                                 </select>
                                             </div>
@@ -160,14 +175,16 @@ $section = sections($sectionNum, 3);
                                         <div class="col-xs-3">
                                             <div class="form-group value-group" <?= $valueVisible ?>>
                                                 <label class="sr-only" for="value"><?= $l10n['init_value'] ?></label>
-                                                <input class="form-control value" value="<?= $var->value ?>" placeholder="<?= $l10n['value'] ?>" type="text">
+                                                <input class="form-control value" value="<?= $var->value ?>"
+                                                       placeholder="<?= $l10n['value'] ?>" type="text">
                                             </div>
                                             <div class="form-group size-group" <?= $sizeVisible ?>>
                                                 <label class="sr-only" for="size"><?= $l10n['array_size'] ?></label>
                                                 <select class="form-control size">
                                                     <optgroup label="<?= $l10n['size'] ?>">
-                                                        <?php for($i = ARRAY_MIN_SIZE; $i <= ARRAY_MAX_SIZE; $i++): ?>
-                                                        <option <?php if ($var->size == $i): ?>selected="selected"<?php endif ?>><?= $i ?></option>
+                                                        <?php for ($i = ARRAY_MIN_SIZE; $i <= ARRAY_MAX_SIZE; $i++): ?>
+                                                            <option
+                                                                <?php if ($var->size == $i): ?>selected="selected"<?php endif ?>><?= $i ?></option>
                                                         <?php endfor ?>
                                                     </optgroup>
                                                 </select>
@@ -176,10 +193,12 @@ $section = sections($sectionNum, 3);
                                     </td>
                                     <td class="buttons edit" style="display: none">
                                         <div class="btn-group btn-group-xs">
-                                            <button type="button" class="btn btn-default btn-var-check" title="<?= $l10n['check_var'] ?>">
+                                            <button type="button" class="btn btn-default btn-var-check"
+                                                    title="<?= $l10n['check_var'] ?>">
                                                 <span class="glyphicon glyphicon-ok"></span>
                                             </button>
-                                            <button type="button" class="btn btn-default btn-var-cancel" title="<?= $l10n['discard_changes'] ?>">
+                                            <button type="button" class="btn btn-default btn-var-cancel"
+                                                    title="<?= $l10n['discard_changes'] ?>">
                                                 <span class="glyphicon glyphicon-remove"></span>
                                             </button>
                                         </div>
@@ -206,7 +225,8 @@ $section = sections($sectionNum, 3);
             <div class="panel panel-default">
                 <div class="panel-heading" data-toggle="collapse" data-target="#stepPanel">
                     <h4 class="panel-title">
-                        <span class="glyphicon glyphicon-chevron-<?php if ($section[2]): ?>down<?php else: ?>right<?php endif ?>"></span>
+                        <span
+                            class="glyphicon glyphicon-chevron-<?php if ($section[2]): ?>down<?php else: ?>right<?php endif ?>"></span>
                         <?= $l10n['steps'] ?>
                     </h4>
                 </div>
@@ -215,12 +235,24 @@ $section = sections($sectionNum, 3);
                         <ul id="insertStepsHere" class="sortable"><?php $tree->printHtml(['vars' => $vars]) ?></ul>
 
                         <div id="node-btn-group" class="btn-group btn-group-lg" role="group" aria-label="Create a Node">
-                            <button id="btn-add-assign" type="button" class="btn btn-default btn-lg" data-node="assign-node">Assign</button>
-                            <button id="btn-add-compare" type="button" class="btn btn-default btn-lg" data-node="compare-node">Compare</button>
-                            <button id="btn-add-constant" type="button" class="btn btn-default btn-lg" data-node="constant-node">Constant</button>
-                            <button id="btn-add-if" type="button" class="btn btn-default btn-lg" data-node="if-node">If</button>
-                            <button id="btn-add-var" type="button" class="btn btn-default btn-lg" data-node="var-node">Var</button>
-                            <button id="btn-add-while" type="button" class="btn btn-default btn-lg" data-node="while-node">While</button>
+                            <button id="btn-add-assign" type="button" class="btn btn-default btn-lg"
+                                    data-node="assign-node">Assign
+                            </button>
+                            <button id="btn-add-compare" type="button" class="btn btn-default btn-lg"
+                                    data-node="compare-node">Compare
+                            </button>
+                            <button id="btn-add-constant" type="button" class="btn btn-default btn-lg"
+                                    data-node="constant-node">Constant
+                            </button>
+                            <button id="btn-add-if" type="button" class="btn btn-default btn-lg" data-node="if-node">
+                                If
+                            </button>
+                            <button id="btn-add-var" type="button" class="btn btn-default btn-lg" data-node="var-node">
+                                Var
+                            </button>
+                            <button id="btn-add-while" type="button" class="btn btn-default btn-lg"
+                                    data-node="while-node">While
+                            </button>
                         </div>
 
                         <ul style="display: none">
