--- a/partials/index.phtml
+++ b/partials/index.phtml
@@ -4,7 +4,9 @@ if (!defined('BASEDIR')) die('You cannot call this script directly !');
 ?>
 <!-- HEADER -->
 <div class="page-header">
-    <h1><?= $l10n['index'] ?> <small><?= $l10n['all_algos'] ?></small></h1>
+    <h1><?= $l10n['index'] ?>
+        <small><?= $l10n['all_algos'] ?></small>
+    </h1>
 </div>
 <!-- CONTENT -->
 <!-- TODO: index page! -->
