--- a/partials/register.phtml
+++ b/partials/register.phtml
@@ -9,7 +9,9 @@ if (!defined('BASEDIR')) die('You cannot call this script directly !')
 ?>
 <!-- HEADER -->
 <div class="page-header">
-    <h1><?= $l10n['register'] ?> <small><?= $l10n['become_user'] ?></small></h1>
+    <h1><?= $l10n['register'] ?>
+        <small><?= $l10n['become_user'] ?></small>
+    </h1>
 </div>
 <!-- CONTENT -->
 <div class="row">
@@ -19,40 +21,52 @@ if (!defined('BASEDIR')) die('You cannot call this script directly !')
             <button id="registerAlertClose" type="button" class="close">
                 <span aria-hidden="true">&times;</span><span class="sr-only"><?= $l10n['close'] ?></span>
             </button>
-            <strong><?= $l10n['error'] ?></strong><div id="registerAlertText"></div>
+            <strong><?= $l10n['error'] ?></strong>
+
+            <div id="registerAlertText"></div>
         </div>
         <div id="registerSuccess" class="alert alert-success alert-dismissible" style="display:none">
             <button id="registerSuccessClose" type="button" class="close">
                 <span aria-hidden="true">&times;</span><span class="sr-only"><?= $l10n['close'] ?></span>
             </button>
-            <strong><?= $l10n['success'] ?></strong><div id="registerSuccessText"></div>
+            <strong><?= $l10n['success'] ?></strong>
+
+            <div id="registerSuccessText"></div>
         </div>
 
         <form class="form-horizontal" role="form" method="post" name="register">
             <div id="username-group" class="form-group">
                 <label for="in-username" class="control-label col-sm-3"><?= $l10n['username'] ?></label>
+
                 <div class="col-sm-9">
                     <input type="text" class="form-control" id="in-username" name="username"
-                    <?php if(isset($username)): ?>value="<?= $username ?>"<?php endif ?> placeholder="<?= $l10n['username'] ?>" />
+                           <?php if (isset($username)): ?>value="<?= $username ?>"<?php endif ?>
+                           placeholder="<?= $l10n['username'] ?>"/>
                 </div>
             </div>
             <div id="email-group" class="form-group">
                 <label for="in-email" class="control-label col-sm-3"><?= $l10n['email_address'] ?></label>
+
                 <div class="col-sm-9">
                     <input type="email" class="form-control" id="in-email" name="email"
-                    <?php if(isset($email)): ?>value="<?= $email ?>"<?php endif ?> placeholder="<?= $l10n['email_address'] ?>">
+                           <?php if (isset($email)): ?>value="<?= $email ?>"<?php endif ?>
+                           placeholder="<?= $l10n['email_address'] ?>">
                 </div>
             </div>
             <div id="password1-group" class="form-group">
                 <label for="in-password1" class="control-label col-sm-3"><?= $l10n['password'] ?></label>
+
                 <div class="col-sm-9">
-                    <input type="password" class="form-control" id="in-password1" name="password1" placeholder="<?= $l10n['password'] ?>">
+                    <input type="password" class="form-control" id="in-password1" name="password1"
+                           placeholder="<?= $l10n['password'] ?>">
                 </div>
             </div>
             <div id="password2-group" class="form-group">
                 <label for="in-password2" class="control-label col-sm-3"></label>
+
                 <div class="col-sm-9">
-                    <input type="password" class="form-control" id="in-password2" name="password2" placeholder="<?= $l10n['password_again'] ?>">
+                    <input type="password" class="form-control" id="in-password2" name="password2"
+                           placeholder="<?= $l10n['password_again'] ?>">
                 </div>
             </div>
             <a href="#" id="registerBtn" class="btn btn-primary btn-lg"><?= $l10n['register'] ?></a>
