--- a/partials/settings.phtml
+++ b/partials/settings.phtml
@@ -14,14 +14,16 @@ $_algo = $_model->fetchAlgorithmByAID($aid);
 $_model->close();
 
 // check authentication
-if (!isSignedIn() || $_SESSION['uid'] != $_algo->uid){
+if (!isSignedIn() || $_SESSION['uid'] != $_algo->uid) {
     header("Location:" . url(['action' => 'view', 'aid' => $aid]));
     die();
 }
 ?>
 <!-- HEADER -->
 <div class="page-header">
-    <h1><?= $l10n['settings'] ?> <small><?= $l10n['configure_algo'] ?></small></h1>
+    <h1><?= $l10n['settings'] ?>
+        <small><?= $l10n['configure_algo'] ?></small>
+    </h1>
 </div>
 <!-- CONTENT -->
 <!-- TODO: settings page! -->
